src/core/jit/snapshots/tailcall__core__jit__builder__tests__directives.snap
---
source: src/core/jit/builder.rs
expression: plan.into_nested()
---
[
    Field {
        id: 0,
        name: "users",
        output_name: "users",
        ir: "Some(..)",
        type_of: [User],
        type_condition: Some(
            "Query",
        ),
        extensions: Some(
            Nested(
                [
                    Field {
                        id: 1,
                        name: "id",
                        output_name: "id",
                        type_of: ID!,
                        type_condition: Some(
                            "User",
                        ),
                        directives: [
                            Directive {
                                name: "options",
                                arguments: [
                                    (
                                        "paging",
                                        Boolean(
                                            true,
                                        ),
                                    ),
                                ],
                            },
                        ],
                    },
                    Field {
                        id: 2,
                        name: "name",
                        output_name: "name",
                        type_of: String!,
                        type_condition: Some(
                            "User",
                        ),
                        include: Some(
                            Variable(
                                "includeName",
                            ),
                        ),
                        directives: [],
                    },
                ],
            ),
        ),
        directives: [],
    },
]
